--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- item_shop colors -->
+    <color name="item_shop_enabled_background">#FFBB86FC</color>
+    <color name="item_shop_disabled_background">#D1C4E9</color>
+    <color name="item_shop_enabled_text">#EDE7F6</color>
+    <color name="item_shop_disabled_text">#EDE7F6</color>
+
+    <!-- activity_main colors -->
+    <color name="floating_action_button_background">#FF03DAC5</color>
+    <color name="activity_main_background">#FFFFFFFF</color>
+
 </resources>
