--- a/app/src/main/res/layout/item_shop_disabled.xml
+++ b/app/src/main/res/layout/item_shop_disabled.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="4dp"
@@ -21,8 +20,7 @@
         android:layout_margin="12dp"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:textColor="@color/item_shop_disabled_text"
-        tools:text="Strawberry" />
+        android:textColor="@color/item_shop_disabled_text" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/cv_count"
@@ -32,7 +30,5 @@
         android:layout_margin="12dp"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:textColor="@color/item_shop_disabled_text"
-        tools:text="12" />
-
+        android:textColor="@color/item_shop_disabled_text" />
 </com.google.android.material.card.MaterialCardView>
