--- a/app/src/main/res/layout/fragment_shop_item.xml
+++ b/app/src/main/res/layout/fragment_shop_item.xml
@@ -22,6 +22,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_name"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -34,12 +35,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_name"
-                android:text="@{viewModel.shopItem.name}"
-                android:inputType="textCapWords" />
+                android:inputType="textCapWords"
+                android:text="@{viewModel.shopItem.name}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_count"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -51,8 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_count"
-                android:text="@{String.valueOf(viewModel.shopItem.count)}"
-                android:inputType="number" />
+                android:inputType="number"
+                android:text="@{String.valueOf(viewModel.shopItem.count)}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Space
